--- a/index.html
+++ b/index.html
@@ -58,18 +58,9 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <!-- <img src="/img/amenties/cab.jpg" class="ag-timeline-card_img" width="640"
-                                        height="360" /> -->
-                                    <video autoplay loop width="100%">
-                                        <source src="/animated-vid/cab-arrived-at-location-6235830-5121495.mp4"
-                                            type="video/mp4">
-                                    </video>
-                                </div>
-                                <div class="ag-timeline-card_info">
-                                    <div class="ag-timeline-card_title">Season 13</div>
-                                    <div class="ag-timeline-card_desc">
-
-                                    </div>
+                                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_11MIUz.json"
+                                        background="rgba(0, 0, 0, 0)" speed="1" style="width: 350px; height: 300px;"
+                                        loop autoplay></lottie-player>
                                 </div>
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
@@ -80,7 +71,7 @@
                         <div class="ag-timeline-card_box">
                             <div class="ag-timeline-card_meta-box">
                                 <div class="ag-timeline-card_meta">Help Desk and Concierge Service Available
-                                    Recreational Activities available</div>
+                                </div>
                             </div>
                             <div class="js-timeline-card_point-box ag-timeline-card_point-box">
                                 <div class="ag-timeline-card_point">2</div>
@@ -89,22 +80,9 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-12.png"
-                                        class="ag-timeline-card_img" width="640" height="360" alt="" />
-                                </div>
-                                <div class="ag-timeline-card_info">
-                                    <div class="ag-timeline-card_title">Season 12</div>
-                                    <div class="ag-timeline-card_desc">
-                                        Donec pede justo, fringilla
-                                        vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-                                        venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
-                                        tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-                                        eleifend
-                                        tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-                                        Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
-                                        viverra
-                                        nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
-                                    </div>
+                                    <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_uznrzu5p.json"
+                                        background="rgba(0, 0, 0, 0)" speed="1" style="width: 350px; height: 300px;"
+                                        loop autoplay></lottie-player>
                                 </div>
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
@@ -124,22 +102,9 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-11.png"
-                                        class="ag-timeline-card_img" width="640" height="360" alt="" />
-                                </div>
-                                <div class="ag-timeline-card_info">
-                                    <div class="ag-timeline-card_title">Season 11</div>
-                                    <div class="ag-timeline-card_desc">
-                                        Aenean imperdiet. Etiam ultricies
-                                        nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam
-                                        rhoncus.
-                                        Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
-                                        amet
-                                        adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar,
-                                        hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae
-                                        sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget
-                                        eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
-                                    </div>
+                                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_jBvjF3.json"
+                                        background="rgba(0, 0, 0, 0)" speed="1" style="width: 350px; height: 300px;"
+                                        loop autoplay></lottie-player>
                                 </div>
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
@@ -158,10 +123,11 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-10.png"
-                                        class="ag-timeline-card_img" width="640" height="360" alt="" />
+                                    <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_ebaipz9q.json"
+                                        background="rgba(0, 0, 0, 0)" speed="1" style="width:350px; height: 300px;" loop
+                                        autoplay></lottie-player>
                                 </div>
-                                <div class="ag-timeline-card_info">
+                                <!-- <div class="ag-timeline-card_info">
                                     <div class="ag-timeline-card_title">Season 10</div>
                                     <div class="ag-timeline-card_desc">
                                         Cum sociis natoque penatibus et magnis dis parturient
@@ -172,7 +138,7 @@
                                         venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
                                         tincidunt. Cras dapibus. Vivamus elementum semper nisi.
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
                         </div>
@@ -190,10 +156,11 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-9.png"
-                                        class="ag-timeline-card_img" width="640" height="360" alt="" />
+                                    <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_pmqt2q8c.json"
+                                        background="rgba(0,0,0,0)" speed="1" style="width:350px; height: 300px;" loop
+                                        autoplay></lottie-player>
                                 </div>
-                                <div class="ag-timeline-card_info">
+                                <!-- <div class="ag-timeline-card_info">
                                     <div class="ag-timeline-card_title">Season 9</div>
                                     <div class="ag-timeline-card_desc">
                                         Vivamus elementum semper nisi. Aenean vulputate eleifend
@@ -203,7 +170,7 @@
                                         nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies
                                         nisi vel augue. Curabitur ullamcorper ultricies nisi.
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
                         </div>
@@ -221,10 +188,11 @@
                         <div class="ag-timeline-card_item">
                             <div class="ag-timeline-card_inner">
                                 <div class="ag-timeline-card_img-box">
-                                    <img src="https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/img-8.png"
-                                        class="ag-timeline-card_img" width="640" height="360" alt="" />
+                                    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_42B8LS.json"
+                                        background="rgba(0,0,0,0)" speed="1" style="width:350px; height: 300px;" loop
+                                        autoplay></lottie-player>
                                 </div>
-                                <div class="ag-timeline-card_info">
+                                <!-- <div class="ag-timeline-card_info">
                                     <div class="ag-timeline-card_title">Season 8</div>
                                     <div class="ag-timeline-card_desc">
                                         Donec quam felis, ultricies nec, pellentesque eu,
@@ -233,7 +201,7 @@
                                         venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
                                         tincidunt. Cras dapibus. Vivamus elementum semper nisi.
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="ag-timeline-card_arrow"></div>
                         </div>
@@ -467,7 +435,7 @@
         </div>
     </section>
 
-
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     <script src="/script.js"></script>
 </body>
