--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="inner-width">
         <div class="header-content">
-            <h2>Come step into 2023 with MOD Avenue</h2>
+            <h2>Luxury has a new address</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor porro quasi vitae quo quis! Officia
                 possimus eligendi repudiandae, magnam mollitia esse minima in ipsa vel dolore fuga suscipit, porro fugit
@@ -37,8 +37,10 @@
         </div>
     </header>
 
+
+    <!-- Amenities -->
     <section class="ag-section inner-width">
-        <h2>Amenties for a comfortable stay</h2>
+        <h2>Amenities & Services</h2>
         <div class="ag-format-container">
             <div class="js-timeline ag-timeline">
                 <div class="js-timeline_line ag-timeline_line">
@@ -431,6 +433,91 @@
                         </div>
                     </div> -->
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Nearby locations -->
+    <section class="inner-width">
+        <div class="nearby-loc-grid">
+            <div>
+                <h2>What's nearby</h2>
+            </div>
+            <div>
+                <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_02j1tyzp.json"
+                    background="transparent" speed="1" style="height: 450px;" loop autoplay></lottie-player>
+            </div>
+        </div>
+
+        <div class="nearby-loc">
+            <div>
+                <h4>IFFCO Chowk</h4>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <div>
+                    <p>
+                        <img src="/img/nearby/road.png" alt=""> <span>04 kms</span>
+                    </p>
+                    <p>
+                        <img src="/img/nearby/clock.png" alt=""> <span>8-10 Minutes Drive</span>
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <h4>delhi-jaipur highway(NH48)</h4>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <p><img src="/img/nearby/road.png" alt=""><span>Just 900 meters</span></p>
+                <p><img src="/img/nearby/clock.png" alt=""><span>5-7 Minutes walking</span></p>
+            </div>
+
+            <div>
+                <h4>Ambience Mall</h4>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <p>
+                    <img src="/img/nearby/road.png" alt=""> <span>just 1.2 kms</span>
+                </p>
+                <p>
+                    <img src="/img/nearby/clock.png" alt=""> <span>12-15 minutes walking</span>
+                </p>
+            </div>
+
+            <div>
+                <h4>Cyber city</h4>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <p><img src="/img/nearby/road.png" alt=""> <span>Just 900 meters</span> </p>
+
+                <p>
+                    <img src="/img/nearby/clock.png" alt=""> <span>57 minutes walking</span>
+                </p>
+            </div>
+
+            <div>
+                <h4>Rapid Metro (DMRC)</h4>
+                <h5>Moulsari Avenue Metro station</h5>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <p>
+                    <img src="/img/nearby/road.png" alt=""> <span> Just 500 meters</span>
+                </p>
+
+                <p>
+                    <img src="img/nearby/clock.png" alt=""> <span>2-3 minutes walking</span>
+                </p>
+            </div>
+
+            <div>
+                <h4>IGI Airport, Delhi</h4>
+                <lottie-player src="https://assets6.lottiefiles.com/temp/lf20_EVDaJ0.json" speed="1"
+                    style="height: 140px;" loop autoplay></lottie-player>
+                <p>
+                    <img src="/img/nearby/road.png" alt="">
+                    <span>11kms from airport</span>
+                </p>
             </div>
         </div>
     </section>
