--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOD Avenue - Boutique Hotel</title>
     <link rel='stylesheet' href='https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css'>
+    <script src="https://kit.fontawesome.com/3f4407d049.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -16,7 +17,7 @@
 
         <div class="navbar-items">
             <li><a href="" class="current">Home</a></li>
-            <li><a href="">About Us</a></li>
+            <li><a href="/about.html">About Us</a></li>
             <li><a href="">FAQs</a></li>
             <li><a href="">Contact Us</a></li>
         </div>
@@ -521,6 +522,30 @@
             </div>
         </div>
     </section>
+
+
+    <footer class="inner-width">
+        <h2><span>call us for rest</span></h2>
+        <h3>
+            <i class="fa-solid fa-location-dot"></i> 53,moulsari ave, DLF phase 3, sector 24, gurugram, haryana 122022
+        </h3>
+
+        <div class="footer-grid">
+            <img src="/img/MOD Avenue -logo_white.png" alt="">
+            <div class="contact-no">
+                <h4><a href="">+91 8888867011</a></h4>
+            </div>
+            <div class="social-link">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <div class="footer-copyright foo">
+        <h4>&copy;2023-24 MOD Avenue | Designed & Developed by ML | All Rights Reserved</h4>
+    </div>
 
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
