--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <div class="navbar-items">
             <li><a href="" class="current">Home</a></li>
             <li><a href="/about.html">About Us</a></li>
-            <li><a href="">FAQs</a></li>
             <li><a href="">Contact Us</a></li>
         </div>
     </nav>
@@ -523,7 +522,101 @@
         </div>
     </section>
 
+    <!-- FAQs -->
+    <section class="inner-width" id="faqs">
+        <div class="faq-head">
+            <h2>Frequently Asked Questions</h2>
+        </div>
+        <div class="faq-container">
+            <div class="faq active">
+                <h3 class="faq-title">
+                    How do I get a Gorilla Dao Nft?
+                </h3>
 
+                <p class="faq-text">
+                    You can mint any random Gangsta Gorilla. It's really easy.
+                </p>
+
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="faq">
+                <h3 class="faq-title">
+                    What will the total supply for GEN-0 GORILLAS?
+                </h3>
+                <p class="faq-text">
+                    The total GEN-0 Male gorillas will be 1777.
+                </p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="faq">
+                <h3 class="faq-title">
+                    How can I mint?
+                </h3>
+                <p class="faq-text">
+                    All you have to do is to get a fraction of $CRO coin. It's advisable to buy $CRO from a verified
+                    source. You can then
+                    transfer your $CRO to Metamask (recommended).
+                </p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="faq">
+                <h3 class="faq-title">
+                    When can I start minting?
+                </h3>
+                <p class="faq-text">
+                    We will be announcing our public sales soon, once done you will be able to mint will be announcing
+                    any updates across
+                    all channels.
+                </p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="faq">
+                <h3 class="faq-title">
+                    What are gas fees?
+                </h3>
+                <p class="faq-text">
+                    Gas is simply a form of payment made to blockchain platforms when you carry out any activity in it.
+                    The payment is called a gas fee.
+                </p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="faq">
+                <h3 class="faq-title">
+                    Can I Stake the NFT?
+                </h3>
+                <p class="faq-text">
+                    Yes ,we have a unique staking mechanism which will distribute the $GDAO token according to the
+                    rarity of the your NFT.
+                </p>
+                <button class="faq-toggle">
+                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
     <footer class="inner-width">
         <h2><span>call us for rest</span></h2>
         <h3>
@@ -549,6 +642,7 @@
 
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/script.js"></script>
 </body>
 
